added day3 assignment