@@ -1,9 +1,6 @@
 package day4;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class StreamTest {
@@ -11,16 +8,16 @@ public class StreamTest {
         List<Integer> ls = Arrays.asList(3,5,1,4,100,-1);
 
         //map
-        List<Integer> square = ls.stream().map(i -> i * i).collect(Collectors.toList());
-        System.out.println(square.toString());
+        List<Integer> square = ls.stream().map(i -> i * i).toList();
+        System.out.println(square);
 
         //filter
-        List<Integer> greaterThan0 = ls.stream().filter(i -> i >= 0).collect(Collectors.toList());
-        System.out.println(greaterThan0.toString());
+        List<Integer> greaterThan0 = ls.stream().filter(i -> i >= 0).toList();
+        System.out.println(greaterThan0);
 
         //sorted
-        List<Integer> sorted = ls.stream().sorted().collect(Collectors.toList());
-        System.out.println(sorted.toString());
+        List<Integer> sorted = ls.stream().sorted().toList();
+        System.out.println(sorted);
 
         //forEach
         ls.stream().forEach(i -> System.out.print(i+" "));
@@ -28,24 +25,24 @@ public class StreamTest {
 
         //flatmap
         List<List<Integer>> ls2d = Arrays.asList(ls, square);
-        List<Integer> times3 = ls2d.stream().flatMap(Collection::stream).map(i -> i*3).collect(Collectors.toList());
-        System.out.println(times3.toString());
+        List<Integer> times3 = ls2d.stream().flatMap(Collection::stream).map(i -> i*3).toList();
+        System.out.println(times3);
 
         //distinct
-        List<Integer> unique = times3.stream().distinct().collect(Collectors.toList());
-        System.out.println(unique.toString());
+        List<Integer> unique = times3.stream().distinct().toList();
+        System.out.println(unique);
 
         //limit
-        List<Integer> lessThan3 = ls.stream().limit(3).collect(Collectors.toList());
-        System.out.println(lessThan3.toString());
+        List<Integer> lessThan3 = ls.stream().limit(3).toList();
+        System.out.println(lessThan3);
 
         //count
         System.out.println(ls.stream().filter(i -> i < 100).count() + " elements less than 100.");
 
         //max
-        System.out.println(ls.stream().max((a, b)-> a-b) + " is the largest element.");
+        System.out.println(ls.stream().max((a, b) -> a-b) + " is the largest element.");
 
         //reduce
-        System.out.println(ls.stream().reduce(0, (subtotal, element) -> subtotal + element) + " is the sum.");
+        System.out.println(ls.stream().reduce(0, Integer::sum) + " is the sum.");
     }
 }
